--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "puppeteer": "^22.11.2"
+    "puppeteer": "^22.11.2",
+    "puppeteer-core": "^22.12.0"
   }
 }
